# databricks-dab-examples

./: .gitignore  CODEOWNERS.txt  NOTICE.txt  README.md
.github/workflows/: main.yml
NewDABs/: databricks.yml
dais-2024-dab-mod-orch-template/: README.md  databricks_template_schema.json
dais-2024-dab-mod-orch-template/template/: databricks.yml.tmpl
dais-2024-dab-mod-orch-template/template/resources/: {{.project_name}}_job.yml.tmpl
dais-2024-dab-mod-orch-template/template/src/: Aggregate Records.ipynb.tmpl  Clean Data.ipynb.tmpl  Fix Bad Records.ipynb.tmpl  Ingest Source 1.ipynb.tmpl  Ingest Source 2.ipynb.tmpl  Ingest Source 3.ipynb.tmpl
flights-bundle-template/: README.md  databricks_template_schema.json
flights-bundle-template/template/: databricks.yml.tmpl
flights-bundle-template/template/resources/: flights_notebook_job.yml.tmpl  (+2 more)
flights-simple/: README.md  databricks.yml
flights-simple/_cicd/: local_folder_sync.sh
flights-simple/resources/: DABs.job.yml
flights-simple/src/: flights_main_notebook.py
sts-dabs-demo/: .gitignore  README.md  bundle-schema.json  databricks.yml
sts-dabs-demo/pipeline_example_by_provider/: .gitlab-ci.yml  azure-pipelines.yml  bitbucket-pipelines.yml  github-actions.yml
sts-dabs-demo/resources/: awesome_job.yml  clusters.yml  permissions.yml
sts-dabs-demo/src/: python_notebook.ipynb
sts-dabs-demo/tests/: test_unity_catalog.py
uv_bundle/: Makefile  README.md  databricks.yml  pyproject.toml
uv_bundle/src/uv_bundle/: main.py
uv_bundle/src/uv_bundle/functions/: transforms.py
uv_bundle/tests/: test_main.py
(+10 files in other folders)
